fixed spacing issues

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,6 +40,7 @@ li {
   height: 500px;
   display: block;
   float: left;
+  margin-top: 15px;
 }
 
 #directory {
@@ -122,7 +123,6 @@ li {
 }
 
 #last {
-	margin-bottom: 100px;
 }
 
 /* Side by side after 880px width browser */
